src/pages/ProductPage/ProductPage.module.css
.pageWrapper {
  margin-top: 40px;
  display: flex;
  flex-direction: column;
  gap: 32px;
}

.backButton {
  background: transparent;
  border: none;
  cursor: pointer;
  align-self: flex-start;
  display: inline-flex;
  align-items: center;
  gap: 8px;
  color: #94a3b8;
  text-decoration: none;
  font-weight: 500;
  font-size: 1.1rem;
  transition: color 0.2s ease;
  padding: 8px 0;
}

.backButton:hover {
  color: #00f6ff;
}

.productLayout {
  display: flex;
  align-items: center;
  gap: 60px;
  background-color: #1e293b50;
  padding: 50px;
  border-radius: 24px;
  border: 1px solid #334155;
  width: 100%;
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 4rem;
}

.image {
  width: 100%;
  max-width: 450px;
  aspect-ratio: 1 / 1;
  object-fit: contain;
  flex-shrink: 0;
  height: auto;
  background-color: #0f172a;
  padding: 30px;
  border-radius: 20px;
  border: 2px solid #00f6ff;
  box-shadow: 0 0 30px rgba(0, 246, 255, 0.25);
}

.infoSection {
  display: flex;
  flex-direction: column;
  gap: 24px;
  flex: 1;
}

.title {
  color: white;
  font-size: 3.5rem;
  margin: 0;
  line-height: 1.1;
}

.collection {
  color: #94a3b8;
  font-size: 1.1rem;
  margin: 0;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-weight: 600;
}

.price {
  color: #00f6ff;
  font-size: 2.5rem;
  font-weight: 700;
  margin: 10px 0;
  text-shadow: 0 0 15px rgba(0, 246, 255, 0.5);
}

.addToCartBtn {
  padding: 18px 40px;
  font-size: 1.1rem;
  background: #ff880095;
  border: 2px solid #ff8a00;
  border-radius: 12px;
  color: white;
  cursor: pointer;
  margin-top: 10px;
  font-weight: 700;
  transition: all 0.3s ease;
  text-transform: uppercase;
  letter-spacing: 1px;
  width: fit-content;
}

.addToCartBtn:hover {
  background-color: #ff8a00;
  color: #0b1524;
  box-shadow: 0 0 20px rgba(255, 138, 0, 0.6);
}

.relatedSection {
  margin-bottom: 2rem;
  border-top: 1px solid #1e293b;
}

.relatedTitle {
  color: #fff;
  font-size: 1.8rem;
  margin-bottom: 1.5rem;
}

.relatedGrid {
  display: flex;
  justify-content: center;
  gap: 1.5rem;
  flex-wrap: wrap;
}

@media (max-width: 968px) {
  .productLayout {
    flex-direction: column;
    text-align: center;
    gap: 40px;
    padding: 30px 20px;
    margin-bottom: 4rem;
  }

  .image {
    max-width: 100%;
    padding: 20px;
  }

  .infoSection {
    align-items: center;
    gap: 16px;
  }

  .title {
    font-size: 2.5rem;
  }

  .price {
    font-size: 2rem;
  }
}

